Task013 Dashboard finalizada

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$tuv/NDzQMvvPxxJ2uwG6q.9Bm6YjwnbX75x4imDXn6/47Y.pdG.Ni"
+# 	- password: java.lang.String = "$2a$05$0RabMa9QSXrN3xBQeOzo/.rcp6M9MNekW5gn3e/m2Sl56s9Dudvce"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$LB7.yZQTumntak/spTkhseGUIR4xRCoQogA/U5Wh8W9C8DODW3NpG"
+# 	- password: java.lang.String = "$2a$05$r6UTGCcPIO5GeUdk2m0kyukuNRbeI6fhy0T07HHJnHvi99Liel7aK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$ULQz/IAvKUcGk1DZXF8f2u0M5rfRUy9w1wwS7pgbXNhWHSmYGyydW"
+# 	- password: java.lang.String = "$2a$05$Vd4XMazfbaK71Tuq7Ik3ces9aifvlvmppix2A6FS5dYIAM88raUAC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$mvjkgDO7CYVKXh52Goj9TuGtJQjzv.5wjHq6QaQKT58x6CioRFLum"
+# 	- password: java.lang.String = "$2a$05$mPjfpiZPhpdQVP1v7afoP.d8beV8sBSR6UXi6asN06l2LthCvSGGC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$kuEaHRsr0d.y7KTNlD7V6OOr8zWpQKYirbsYro3sGhA.wOBKNdGyq"
+# 	- password: java.lang.String = "$2a$05$Kn6.WRYdpIjRwY3JALWF7Oscu3GGTf0UtOS1yfRV3ZzWlulWJU77u"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$nmSTjN7r6EYrPMeAWMvFfufcvYs.50gBfr9kuS7ZbZYogFi7dm.TO"
+# 	- password: java.lang.String = "$2a$05$jmSnkv2vztKNkFvjskhmEO1JmxfVcMl7joUE.w92Fd23iBSHTCQYC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$0lbgNxgVdeS64eBs76X5C.pzsgQye/s5UTUOfIE.enWTEwwjIm8cW"
+# 	- password: java.lang.String = "$2a$05$2bEGbOFvNxI8ZbgsW2yMf.chdc.7Vfjg/WVMJa.ao9yU.yDHYRYlO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$Tnxor7qtY7Bp.uHY6T9Y.ur2stAMGxgp79QtBsC0.zGLojcBs2cA6"
+# 	- password: java.lang.String = "$2a$05$tMQb6IhSk0qXEWuPKMmJs.reIIQpKAWDaMGLnaNTXSxZSbfysptuK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$aCCmbg4p6Z0Kx92zUdQq.eJWkLe1EJUBHsZ2szB5Jz8qe9LISi41e"
+# 	- password: java.lang.String = "$2a$05$XEdZM0rkGUVVQIX6zeM9Vu8n62dq9UQesmzDqNhC9wCPIw.fQnpO6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$GkB7I7imp0nU9RsYUZ7QcO3z16OpodKURnPQaP9ldsFTeS5qWgT1y"
+# 	- password: java.lang.String = "$2a$05$XQsNkcm2qjvNYz1p2RqtnubBwsMQUnUHafr4ej/Z7IvqjdSgaKPl."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$HOvSAwjg82rYtBuD5vuFUu63/wydW4tNIxdq2n3JWXRHGgDDDWqrm"
+# 	- password: java.lang.String = "$2a$05$BZlhdR6iVtUU40APUxTEC.mT0SD0oB5X4prLtmf07V1nc3hld7RNu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -1652,7 +1652,7 @@ Application01=105
 # 	- qualifications: java.lang.String = "Qualifications1"
 # 	- statements: java.lang.String = "Statements1"
 # 	- status: java.lang.String = "PENDING"
-# 	- moment: java.util.Date = <<Sun Sep 15 10:10:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Tue Dec 10 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
 
@@ -1671,7 +1671,7 @@ Application02=106
 # 	- qualifications: java.lang.String = "Qualifications2"
 # 	- statements: java.lang.String = "Statements2"
 # 	- status: java.lang.String = "ACCEPTED"
-# 	- moment: java.util.Date = <<Sun Sep 15 10:10:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Tue Dec 10 09:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=31, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
 
@@ -1690,7 +1690,7 @@ Application03=107
 # 	- qualifications: java.lang.String = "Qualifications3"
 # 	- statements: java.lang.String = "Statements3"
 # 	- status: java.lang.String = "REJECTED"
-# 	- moment: java.util.Date = <<Sun Sep 15 10:10:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Thu Dec 05 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=80, version=1}
 
@@ -1709,7 +1709,7 @@ Application04=108
 # 	- qualifications: java.lang.String = "Qualifications4"
 # 	- statements: java.lang.String = "Statements4"
 # 	- status: java.lang.String = "PENDING"
-# 	- moment: java.util.Date = <<Sun Sep 15 10:10:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Mon Nov 25 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=31, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=80, version=1}
 
@@ -1728,7 +1728,7 @@ Application05=109
 # 	- qualifications: java.lang.String = "Qualifications5"
 # 	- statements: java.lang.String = "Statements5"
 # 	- status: java.lang.String = "PENDING"
-# 	- moment: java.util.Date = <<Sun Sep 15 10:10:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Mon Dec 02 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=81, version=1}
 
@@ -1747,7 +1747,7 @@ Application06=110
 # 	- qualifications: java.lang.String = "Qualifications6"
 # 	- statements: java.lang.String = "Statements6"
 # 	- status: java.lang.String = "REJECTED"
-# 	- moment: java.util.Date = <<Sun Sep 15 10:10:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Sun Dec 08 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=82, version=1}
 
@@ -1766,7 +1766,7 @@ Application07=111
 # 	- qualifications: java.lang.String = "Qualifications7"
 # 	- statements: java.lang.String = "Statements7"
 # 	- status: java.lang.String = "ACCEPTED"
-# 	- moment: java.util.Date = <<Sun Sep 15 10:10:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Tue Dec 10 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=83, version=1}
 
