Mejorados las spam words y las request auditor

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$0RabMa9QSXrN3xBQeOzo/.rcp6M9MNekW5gn3e/m2Sl56s9Dudvce"
+# 	- password: java.lang.String = "$2a$05$EDQ0puNOIK9LhpYRrDHTsOH1LG8Z9XbA1Xf62IlIRlRmq.IsB7SFW"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$r6UTGCcPIO5GeUdk2m0kyukuNRbeI6fhy0T07HHJnHvi99Liel7aK"
+# 	- password: java.lang.String = "$2a$05$yYSJw5B2v1XA22uhKZk1Q.NNDgo41C5qpS9mJc7ONumozfhWKb3Ru"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$Vd4XMazfbaK71Tuq7Ik3ces9aifvlvmppix2A6FS5dYIAM88raUAC"
+# 	- password: java.lang.String = "$2a$05$hXvoBeI6.KdUFqdSLQcssOD55t5to9E8eqjNWZek6gCH21XEcvpVu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$mPjfpiZPhpdQVP1v7afoP.d8beV8sBSR6UXi6asN06l2LthCvSGGC"
+# 	- password: java.lang.String = "$2a$05$r7Vxeq4sDQSYVWdrxPxUFeCYdI7yr5xFhABQpFX90G9gTqJ0Rom7C"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$Kn6.WRYdpIjRwY3JALWF7Oscu3GGTf0UtOS1yfRV3ZzWlulWJU77u"
+# 	- password: java.lang.String = "$2a$05$wzwDkEBqslsPND9HnQLpneF8/uoUt9EWWyPdX7iph.UxEjntrOvaG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$jmSnkv2vztKNkFvjskhmEO1JmxfVcMl7joUE.w92Fd23iBSHTCQYC"
+# 	- password: java.lang.String = "$2a$05$/rZpbBy1GGX4JAd8kVIstO3PWfc74DKtBX7tE6t.olQE5Nkyz/Aje"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$2bEGbOFvNxI8ZbgsW2yMf.chdc.7Vfjg/WVMJa.ao9yU.yDHYRYlO"
+# 	- password: java.lang.String = "$2a$05$Ejb6MHgbIGVueCrwygKufeoOS.nYSX2.XPHNWskVlps7rA5GP6ySS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$tMQb6IhSk0qXEWuPKMmJs.reIIQpKAWDaMGLnaNTXSxZSbfysptuK"
+# 	- password: java.lang.String = "$2a$05$oieAfrFbP8cSKENZjB3SX.kgmuv1UkPCBFFhPLjK9aoGjlKQGl3gS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$XEdZM0rkGUVVQIX6zeM9Vu8n62dq9UQesmzDqNhC9wCPIw.fQnpO6"
+# 	- password: java.lang.String = "$2a$05$gTxqOXl/n7EdzrA3v7cREuDKu.QYqTUiIJayjsFx5BnXHeN4lMTe2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$XQsNkcm2qjvNYz1p2RqtnubBwsMQUnUHafr4ej/Z7IvqjdSgaKPl."
+# 	- password: java.lang.String = "$2a$05$Zr6K9or2oGBzC7B8MLXK8OgFMjt3gAPX1wksN966HdYJwyCjUYkTi"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$BZlhdR6iVtUU40APUxTEC.mT0SD0oB5X4prLtmf07V1nc3hld7RNu"
+# 	- password: java.lang.String = "$2a$05$xF87o9KkbNYCxIx.rXhKzeTf1W7B/wFuvhNNAoSvNB66KgJak.UKq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
