ME da un error al lanzar la apliccion del show service, el validate del update no sé si está correcto.

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$tuv/NDzQMvvPxxJ2uwG6q.9Bm6YjwnbX75x4imDXn6/47Y.pdG.Ni"
+# 	- password: java.lang.String = "$2a$05$na8ytcPWACZaFFYej5o.vuy7r.lHoYxxKVpKR6nUOjhSSmFJZMRd."
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$LB7.yZQTumntak/spTkhseGUIR4xRCoQogA/U5Wh8W9C8DODW3NpG"
+# 	- password: java.lang.String = "$2a$05$uoFzPgPZboBW6UfDFk0uvOuCCgNks7bjraOU4FIhRRLvgSLP1rEhe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$ULQz/IAvKUcGk1DZXF8f2u0M5rfRUy9w1wwS7pgbXNhWHSmYGyydW"
+# 	- password: java.lang.String = "$2a$05$q30Bj/v2Zuh65WriUxIvLecQzNeJCL796oQgthKjv.qLu.gx9oxji"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$mvjkgDO7CYVKXh52Goj9TuGtJQjzv.5wjHq6QaQKT58x6CioRFLum"
+# 	- password: java.lang.String = "$2a$05$rCgg/0nE6kA.A/GKtbw.qe74IHPa6Qt0uT1IXIntwgbvL4YPacL.a"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$kuEaHRsr0d.y7KTNlD7V6OOr8zWpQKYirbsYro3sGhA.wOBKNdGyq"
+# 	- password: java.lang.String = "$2a$05$QvQ9j5wviwIIrykvvRF.pe.ZLm4mBpbKpmlqO1G/ZTKhO3oN.6uj2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$nmSTjN7r6EYrPMeAWMvFfufcvYs.50gBfr9kuS7ZbZYogFi7dm.TO"
+# 	- password: java.lang.String = "$2a$05$1.U41gISk3HvSo5atMuHze6Kcvm.c4l/WApW59.IFo.xr2JK0VHxm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$0lbgNxgVdeS64eBs76X5C.pzsgQye/s5UTUOfIE.enWTEwwjIm8cW"
+# 	- password: java.lang.String = "$2a$05$iu2e1cyjwkZ.EkR5LIDm.OJlDtNCfCs2ItO8lDEricEZBL3SyUmnq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$Tnxor7qtY7Bp.uHY6T9Y.ur2stAMGxgp79QtBsC0.zGLojcBs2cA6"
+# 	- password: java.lang.String = "$2a$05$aRNo8Taddo6n8d39dDLFlOH15/3ARfxb84nuut8S8/BbVbN4dRI26"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$aCCmbg4p6Z0Kx92zUdQq.eJWkLe1EJUBHsZ2szB5Jz8qe9LISi41e"
+# 	- password: java.lang.String = "$2a$05$yFPoMHAqbJC/g5/0pbyhrO07/WDgGiQCiKPHEyZa5ZaRxurqcMqBy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$GkB7I7imp0nU9RsYUZ7QcO3z16OpodKURnPQaP9ldsFTeS5qWgT1y"
+# 	- password: java.lang.String = "$2a$05$o8Xw/crbDbh2Lq/XcJC1dunu9xiD/bTcZ7AKKfBE6Q2mFxIfeyxUq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$HOvSAwjg82rYtBuD5vuFUu63/wydW4tNIxdq2n3JWXRHGgDDDWqrm"
+# 	- password: java.lang.String = "$2a$05$fNi/eb.NbDQlTVdaz2mgZu0xIbZiQIZdYibHMU7WhHDY8s7cqVKwq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
