Añadido become sponsor y corregidos errores

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$EDQ0puNOIK9LhpYRrDHTsOH1LG8Z9XbA1Xf62IlIRlRmq.IsB7SFW"
+# 	- password: java.lang.String = "$2a$05$C9JwCTXugel9gk2gzcJgxOB26k5BdpaTCTgHaJO63kKUcUiX07/e."
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$yYSJw5B2v1XA22uhKZk1Q.NNDgo41C5qpS9mJc7ONumozfhWKb3Ru"
+# 	- password: java.lang.String = "$2a$05$iZ4kFHpfITf9HvLApwSRJOsZM.VvltsTT4mhlZ3OdXqn9GsNt3qfm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$hXvoBeI6.KdUFqdSLQcssOD55t5to9E8eqjNWZek6gCH21XEcvpVu"
+# 	- password: java.lang.String = "$2a$05$vCXXVKfrqBExYEU6qZ8LnekYdKsDDJD6NF4Z8sDU7gR2mLk1Co.TG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$r7Vxeq4sDQSYVWdrxPxUFeCYdI7yr5xFhABQpFX90G9gTqJ0Rom7C"
+# 	- password: java.lang.String = "$2a$05$HmrxvJjYUMvF.pUiOIkbAO6C20Qkv.W9Xh8CHyUvc59zq473uDqCC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -156,7 +156,7 @@ sponsor1Sponsor=10
 # 	from acme.entities.roles.Sponsor:
 # 	- serialVersionUID: long = 1
 # 	- name: java.lang.String = "Sponsor ej 1"
-# 	- creditCard: java.lang.String = "123456AX"
+# 	- creditCard: java.lang.String = "5188893404505068"
 
 sponsor1Authenticated=11
 
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$wzwDkEBqslsPND9HnQLpneF8/uoUt9EWWyPdX7iph.UxEjntrOvaG"
+# 	- password: java.lang.String = "$2a$05$0XUVguC7uwrmRvPW6yMxyuE3BhxTQvDo7iJ9VGTFC8vltH.bPCHni"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$/rZpbBy1GGX4JAd8kVIstO3PWfc74DKtBX7tE6t.olQE5Nkyz/Aje"
+# 	- password: java.lang.String = "$2a$05$1phPkXAH4jom/TE9DRDnjuFtzjaSpOsO8bwxomS2R/3SyZ2hr4.EC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$Ejb6MHgbIGVueCrwygKufeoOS.nYSX2.XPHNWskVlps7rA5GP6ySS"
+# 	- password: java.lang.String = "$2a$05$OPwcjraYSKSbPrvSjjE9LusjH3bSEoqqDx4FzwpsX5.2o41Dz.01W"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$oieAfrFbP8cSKENZjB3SX.kgmuv1UkPCBFFhPLjK9aoGjlKQGl3gS"
+# 	- password: java.lang.String = "$2a$05$nAfUoJI7Sc.00kK13KY.0O8BiaFJjUGgQJCtDkyr0aPkdPeBXk7Bm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$gTxqOXl/n7EdzrA3v7cREuDKu.QYqTUiIJayjsFx5BnXHeN4lMTe2"
+# 	- password: java.lang.String = "$2a$05$GHpLk9GIKCsvnL9XTULSy.CT082extwTk.7bFRWi5FkneUBQO7NYW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$Zr6K9or2oGBzC7B8MLXK8OgFMjt3gAPX1wksN966HdYJwyCjUYkTi"
+# 	- password: java.lang.String = "$2a$05$MoKcDp51zQT2a3kHY6gqlusYkVMRKeNst0BPeh0KD1jhnMtRjPGh2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$xF87o9KkbNYCxIx.rXhKzeTf1W7B/wFuvhNNAoSvNB66KgJak.UKq"
+# 	- password: java.lang.String = "$2a$05$y5XYG3zKFGhjheutorUv4egW.oAzUcE41FzHVbFa0.vjRHR89tICq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -847,7 +847,7 @@ Banner01=52
 # 	- picture: java.lang.String = "https://www.ofrendavirgendelpilar.com/wp-content/uploads/2018/09/rosa-roja-ofrenda.jpg"
 # 	- slogan: java.lang.String = "Flowers"
 # 	- url: java.lang.String = "https://www.flores.com"
-# 	- card: java.lang.String = "1111111111111111"
+# 	- card: java.lang.String = "5188893404505068"
 # 	- sponsor: acme.entities.roles.Sponsor = acme.entities.roles.Sponsor{id=10, version=0}
 
 Banner02=53
