--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$C9JwCTXugel9gk2gzcJgxOB26k5BdpaTCTgHaJO63kKUcUiX07/e."
+# 	- password: java.lang.String = "$2a$05$0xDCN/JENWuy3fDO0C9iZuvL9pu/SKzKvFCcFr3g0xvYqR.ShjLMC"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$iZ4kFHpfITf9HvLApwSRJOsZM.VvltsTT4mhlZ3OdXqn9GsNt3qfm"
+# 	- password: java.lang.String = "$2a$05$Dq8l3c/I.xv2oWmJcX6LSeh7wyLpGIG1YFF9zzaNPneEXQM6sqxWG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$vCXXVKfrqBExYEU6qZ8LnekYdKsDDJD6NF4Z8sDU7gR2mLk1Co.TG"
+# 	- password: java.lang.String = "$2a$05$QTFBKB06wyYSsh.Hq1CqOOL7mM6HzXH3OcU0L0ek0m5Ef2zudUfXa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$HmrxvJjYUMvF.pUiOIkbAO6C20Qkv.W9Xh8CHyUvc59zq473uDqCC"
+# 	- password: java.lang.String = "$2a$05$Q8Iy2oPHOmlzHNp6GaBFAuP1s/buGJUyapAm4mTOYHhRJcizXdhEq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$0XUVguC7uwrmRvPW6yMxyuE3BhxTQvDo7iJ9VGTFC8vltH.bPCHni"
+# 	- password: java.lang.String = "$2a$05$o5KBwajtyB0aWUfah52cQOp06axI3/HDaX.OoH07J4MQyaEHL40JO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$1phPkXAH4jom/TE9DRDnjuFtzjaSpOsO8bwxomS2R/3SyZ2hr4.EC"
+# 	- password: java.lang.String = "$2a$05$Vv.w/wtNjOSfj6TeMb8yNOrEmHKb/129qjTrju1yEq.KbpHTxSHBe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$OPwcjraYSKSbPrvSjjE9LusjH3bSEoqqDx4FzwpsX5.2o41Dz.01W"
+# 	- password: java.lang.String = "$2a$05$h3gfvBTnNRl.b/nMs2LuRubUYt3R/ZAWXeSFFJntdme04bm5wJpp2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$nAfUoJI7Sc.00kK13KY.0O8BiaFJjUGgQJCtDkyr0aPkdPeBXk7Bm"
+# 	- password: java.lang.String = "$2a$05$4zEwM0MU/X2RxK1GxfNUgup2LD3IY1BgLCUqbh1CA9hSgdbs79hb."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$GHpLk9GIKCsvnL9XTULSy.CT082extwTk.7bFRWi5FkneUBQO7NYW"
+# 	- password: java.lang.String = "$2a$05$sOINq12gD/jRtdRa4dNbEuo3swOMeVdgd3LxCsI40QG5Elj0vUhGG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$MoKcDp51zQT2a3kHY6gqlusYkVMRKeNst0BPeh0KD1jhnMtRjPGh2"
+# 	- password: java.lang.String = "$2a$05$7ELlcJkRQJ9GH2mOHej0Xeb4LRBT7Rpn620DX9QrmN222yr48ekUC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$y5XYG3zKFGhjheutorUv4egW.oAzUcE41FzHVbFa0.vjRHR89tICq"
+# 	- password: java.lang.String = "$2a$05$Z8w3qPr41XIFO9gfgIjrZO3NKUVQLt6Re7j4boaS2x1/QH3KIX5Eq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
