--- a/src/main/resources/application-deployment.properties
+++ b/src/main/resources/application-deployment.properties
@@ -10,9 +10,9 @@
 
 # User-defined properties.  Please, change them to adapt the starter project to your needs. 
 
-spring.datasource.url							= jdbc:mysql://bhwiutv5g0cufjesmvez-mysql.services.clever-cloud.com:3306/bhwiutv5g0cufjesmvez
-spring.datasource.username						= uhrzgg7obpeatpux
-spring.datasource.password						= oeNBtOm2SL9klfFkuq6k
+spring.datasource.url							= jdbc:mysql://bvrvhu073zfmxqfumuym-mysql.services.clever-cloud.com:3306/bvrvhu073zfmxqfumuym
+spring.datasource.username						= uu6cbaacqzfjuz84
+spring.datasource.password						= a0tkUZnbWn62OhvExZbj
 
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
