--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
 			  	<directory>./src/main/resources</directory>
 			  	<targetPath>./</targetPath>
 			</resource>
+			<resource>
+			  	<directory>./WebContent</directory>
+			  	<targetPath>./</targetPath>
+			</resource>
 	   </resources>
 	</build>
 	
