--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$0xDCN/JENWuy3fDO0C9iZuvL9pu/SKzKvFCcFr3g0xvYqR.ShjLMC"
+# 	- password: java.lang.String = "$2a$05$/IltUcEll3Zm32P69uBHPelK4vgNShhjJTLr/8k3ADI2Tc6GAEiDq"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$Dq8l3c/I.xv2oWmJcX6LSeh7wyLpGIG1YFF9zzaNPneEXQM6sqxWG"
+# 	- password: java.lang.String = "$2a$05$AmL.JdLbCv0wqkl2IbbnLuZt0ftkj.an.V/6u6oPC7SDrR07JPrUu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$QTFBKB06wyYSsh.Hq1CqOOL7mM6HzXH3OcU0L0ek0m5Ef2zudUfXa"
+# 	- password: java.lang.String = "$2a$05$m.uXK2BqJG0.iJMwIBVQO.jKARnaQEY7/PabYn9Hjj98lVk6vbeXG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$Q8Iy2oPHOmlzHNp6GaBFAuP1s/buGJUyapAm4mTOYHhRJcizXdhEq"
+# 	- password: java.lang.String = "$2a$05$6CM4SP9ih.qC3axWUN7.tuIMy5OzkOHrzw0FYGWnj3jR8IuvoOUY2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$o5KBwajtyB0aWUfah52cQOp06axI3/HDaX.OoH07J4MQyaEHL40JO"
+# 	- password: java.lang.String = "$2a$05$9jLcRj/RW3.1.RovzRz9mOJN6NwByFmKTDEHy.ldlg95hYHGHw6ja"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$Vv.w/wtNjOSfj6TeMb8yNOrEmHKb/129qjTrju1yEq.KbpHTxSHBe"
+# 	- password: java.lang.String = "$2a$05$njEnBCEOkwZnGyuYB9bE2e4N5mJap.iMFyNoLxS1D6KZxvEhC/OKm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$h3gfvBTnNRl.b/nMs2LuRubUYt3R/ZAWXeSFFJntdme04bm5wJpp2"
+# 	- password: java.lang.String = "$2a$05$aIrJv1Vl5Kj3r0jML4GLcurTZYdU.g8yYPxdN2b.B8rkMswCCQ.G6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$4zEwM0MU/X2RxK1GxfNUgup2LD3IY1BgLCUqbh1CA9hSgdbs79hb."
+# 	- password: java.lang.String = "$2a$05$K.zwHNKnkRyOMgOmMqZ5L.3ccBYZxTyk3oUhrNguS0uuZyWoZsAHG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$sOINq12gD/jRtdRa4dNbEuo3swOMeVdgd3LxCsI40QG5Elj0vUhGG"
+# 	- password: java.lang.String = "$2a$05$2l61x9.bCeoOv8tyrWQBD.NBtpI5gF1h6bq7OJzIJQHXyyQGdWaf."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$7ELlcJkRQJ9GH2mOHej0Xeb4LRBT7Rpn620DX9QrmN222yr48ekUC"
+# 	- password: java.lang.String = "$2a$05$S3v6rHvmhB942.EHnxMPzOMxHejfQExT6gs4HIqL0DxhSjWPXPhZK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$Z8w3qPr41XIFO9gfgIjrZO3NKUVQLt6Re7j4boaS2x1/QH3KIX5Eq"
+# 	- password: java.lang.String = "$2a$05$eW7wINdkPWCcd5yjQ5Sj9uvnogA56BjrGJprAw2pRjQEKjHuKqkUy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -705,7 +705,7 @@ challenge02=45
 # 	from acme.entities.challenge.Challenge:
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Sample challenge 02"
-# 	- deadline: java.util.Date = <<Thu Dec 05 00:00:00 CET 2019>>
+# 	- deadline: java.util.Date = <<Sat Dec 05 00:00:00 CET 2020>>
 # 	- description: java.lang.String = "Post as many announcements as possible to receive a prize!"
 # 	- goalBronze: java.lang.String = "Post 5 announcements!"
 # 	- rewardBronze: java.lang.String = "1 day premium"
@@ -953,7 +953,7 @@ Request01=59
 # 	- serialVersionUID: long = 1
 # 	- title: java.lang.String = "Titulo01"
 # 	- moment: java.util.Date = <<Sun Oct 27 10:10:00 CET 2019>>
-# 	- deadline: java.util.Date = <<Fri Dec 27 10:10:00 CET 2019>>
+# 	- deadline: java.util.Date = <<Sun Dec 27 10:10:00 CET 2020>>
 # 	- description: java.lang.String = "Esta es una descripción de prueba"
 # 	- reward: acme.framework.datatypes.Money = <<EUR 501.20>>
 # 	- ticker: java.lang.String = "RABCD-91234"
