--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$/IltUcEll3Zm32P69uBHPelK4vgNShhjJTLr/8k3ADI2Tc6GAEiDq"
+# 	- password: java.lang.String = "$2a$05$iR3j0PFhOsL11YVMq/RPQOKASLHKO5/eqn1vey88NMcPR7Azw4Yni"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$AmL.JdLbCv0wqkl2IbbnLuZt0ftkj.an.V/6u6oPC7SDrR07JPrUu"
+# 	- password: java.lang.String = "$2a$05$lw05jwPHba.5I7ssiyN78e2mD5aGqr2FvdN720JZ2lqXVxaY/aBW6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$m.uXK2BqJG0.iJMwIBVQO.jKARnaQEY7/PabYn9Hjj98lVk6vbeXG"
+# 	- password: java.lang.String = "$2a$05$JHbl69fyjUqxPK.a1Ckp7e/8SF51sleG4EdF6cL1r2lqRhgJ85tD2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$6CM4SP9ih.qC3axWUN7.tuIMy5OzkOHrzw0FYGWnj3jR8IuvoOUY2"
+# 	- password: java.lang.String = "$2a$05$cGggpInVbs/KIRuvLm4Nm.AKGCS3N1ytnsmbZ1qT/VwmtMFH.TwUe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$9jLcRj/RW3.1.RovzRz9mOJN6NwByFmKTDEHy.ldlg95hYHGHw6ja"
+# 	- password: java.lang.String = "$2a$05$HNYpCFEcigYPYZ.sU./OZellKjoNiz6/0YR4KMWh.AX9rGFHZJJa."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$njEnBCEOkwZnGyuYB9bE2e4N5mJap.iMFyNoLxS1D6KZxvEhC/OKm"
+# 	- password: java.lang.String = "$2a$05$ozpQ1/55Q/9B9K20hwpS6OKcp1QBCfHib63C52qTwo7zAJ3/aGNlK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$aIrJv1Vl5Kj3r0jML4GLcurTZYdU.g8yYPxdN2b.B8rkMswCCQ.G6"
+# 	- password: java.lang.String = "$2a$05$VHk3JaQn./fUbnmsx7s2j..Dje7m0JswLSWQ/pzeMVFkMlDOZTwXC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$K.zwHNKnkRyOMgOmMqZ5L.3ccBYZxTyk3oUhrNguS0uuZyWoZsAHG"
+# 	- password: java.lang.String = "$2a$05$KCsCmWc95m/jgEQ2mxxz8O6eRqEQXWLH.KA3bm0MKIKfSI2WyYK2q"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$2l61x9.bCeoOv8tyrWQBD.NBtpI5gF1h6bq7OJzIJQHXyyQGdWaf."
+# 	- password: java.lang.String = "$2a$05$BD0LPSgmrNRg8pl2NXJB1OSB7h6xOkC/q3UCXRRUzWYEriVD77gVe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$S3v6rHvmhB942.EHnxMPzOMxHejfQExT6gs4HIqL0DxhSjWPXPhZK"
+# 	- password: java.lang.String = "$2a$05$HRxUqHEEQ6G318vfuz9EVOrZJE.GPHJPEvhCShJ10xcpglYjkRO9K"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$eW7wINdkPWCcd5yjQ5Sj9uvnogA56BjrGJprAw2pRjQEKjHuKqkUy"
+# 	- password: java.lang.String = "$2a$05$QiMPrl/skqOawPdwcAJpHOx0cxIAMXCfdHe2AZ6qQ889BB4v/AMFK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -1252,6 +1252,7 @@ Job01=79
 # 	- salary: acme.framework.datatypes.Money = <<EUR 501.20>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=94, version=0}
+# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = acme.entities.challengeTest.ChallengeTest{id=114, version=0}
 
 Job02=80
 
@@ -1271,6 +1272,7 @@ Job02=80
 # 	- salary: acme.framework.datatypes.Money = <<EUR 500.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=95, version=0}
+# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
 
 Job03=81
 
@@ -1290,6 +1292,7 @@ Job03=81
 # 	- salary: acme.framework.datatypes.Money = <<EUR 400.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=96, version=0}
+# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
 
 Job04=82
 
@@ -1309,6 +1312,7 @@ Job04=82
 # 	- salary: acme.framework.datatypes.Money = <<EUR 501.20>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=19, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=97, version=0}
+# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
 
 Job05=83
 
@@ -1328,6 +1332,7 @@ Job05=83
 # 	- salary: acme.framework.datatypes.Money = <<EUR 5000.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=19, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=98, version=0}
+# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
 
 Job06=84
 
@@ -1347,6 +1352,7 @@ Job06=84
 # 	- salary: acme.framework.datatypes.Money = <<EUR 5000.00>>
 # 	- employer: acme.entities.roles.Employer = acme.entities.roles.Employer{id=16, version=0}
 # 	- descriptor: acme.entities.descriptor.Descriptor = acme.entities.descriptor.Descriptor{id=99, version=0}
+# 	- challengeTest: acme.entities.challengeTest.ChallengeTest = null
 
 Duty01=85
 
@@ -1795,4 +1801,18 @@ Justification02=113
 # 	- serialVersionUID: long = 1
 # 	- reason: java.lang.String = "No me gusta esta peticion 2"
 # 	- application: acme.entities.application.Application = acme.entities.application.Application{id=110, version=0}
+
+CTest1=114
+
+# acme.entities.challengeTest.ChallengeTest{id=114, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 114
+# 	- version: int = 0
+# 	from acme.entities.challengeTest.ChallengeTest:
+# 	- serialVersionUID: long = 1
+# 	- pText: java.lang.String = "Hola"
+# 	- moreInfo2: java.lang.String = "hola otra ve"
+# 	- Job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
 
