--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$iR3j0PFhOsL11YVMq/RPQOKASLHKO5/eqn1vey88NMcPR7Azw4Yni"
+# 	- password: java.lang.String = "$2a$05$A9uYgG53q59ffQ116eSFyOV3rDgMQet8AuFN1dOpuNMGpwtlOJMl2"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator01"
-# 	- password: java.lang.String = "$2a$05$lw05jwPHba.5I7ssiyN78e2mD5aGqr2FvdN720JZ2lqXVxaY/aBW6"
+# 	- password: java.lang.String = "$2a$05$FsEKoHak47L9xlnQ/P/YmOdM4KlCkbTol86PgcythwqiEzHoJkos2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme1.com, email=administrator1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -91,7 +91,7 @@ administratorUserAccount=6
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$JHbl69fyjUqxPK.a1Ckp7e/8SF51sleG4EdF6cL1r2lqRhgJ85tD2"
+# 	- password: java.lang.String = "$2a$05$Giy.oVvwPYBTdxE2hoG3QuOERzU64VWgRhUC7lCSVuWMbJlUeodVu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=7, version=0}, acme.framework.entities.Authenticated{id=8, version=0}]
@@ -136,7 +136,7 @@ sponsor1UserAccount=9
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$cGggpInVbs/KIRuvLm4Nm.AKGCS3N1ytnsmbZ1qT/VwmtMFH.TwUe"
+# 	- password: java.lang.String = "$2a$05$fpZlOdol0UA4fuq6/opbjuEy2QE1wsg3WJ6JF1N675BUaShcetok6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=10, version=0}, acme.framework.entities.Authenticated{id=11, version=0}]
@@ -183,7 +183,7 @@ sponsor2UserAccount=12
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$HNYpCFEcigYPYZ.sU./OZellKjoNiz6/0YR4KMWh.AX9rGFHZJJa."
+# 	- password: java.lang.String = "$2a$05$h4O2f3akEQTFzaHLIi7CzOWNW68MUEwmW.aTU5thRjRr9xOytFqgW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=13, version=0}, acme.framework.entities.Authenticated{id=14, version=0}]
@@ -230,7 +230,7 @@ employer1UserAccount=15
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$ozpQ1/55Q/9B9K20hwpS6OKcp1QBCfHib63C52qTwo7zAJ3/aGNlK"
+# 	- password: java.lang.String = "$2a$05$i/E9JXW2mRS5d/MCmqi/Uu/0nX2LtXXUrnHDkkldkiX/DZhei6LCe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=16, version=0}, acme.framework.entities.Authenticated{id=17, version=0}]
@@ -277,7 +277,7 @@ employer2UserAccount=18
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$VHk3JaQn./fUbnmsx7s2j..Dje7m0JswLSWQ/pzeMVFkMlDOZTwXC"
+# 	- password: java.lang.String = "$2a$05$ITGT2M2lzUcgBAbuEXUuKenPRxV.koFv765QixucQYGJxrjzHCyXi"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer2, surname=Two, email=employer2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=19, version=0}, acme.framework.entities.Authenticated{id=20, version=0}]
@@ -324,7 +324,7 @@ auditor1UserAccount=21
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$KCsCmWc95m/jgEQ2mxxz8O6eRqEQXWLH.KA3bm0MKIKfSI2WyYK2q"
+# 	- password: java.lang.String = "$2a$05$WqZY/RKhstKAA0VJL96guuPTUv5ds2Fqiw7NJAemN7IQARcQSmLAa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor, surname=One, email=auditor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=22, version=0}, acme.framework.entities.Authenticated{id=23, version=0}]
@@ -371,7 +371,7 @@ auditor2UserAccount=24
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$BD0LPSgmrNRg8pl2NXJB1OSB7h6xOkC/q3UCXRRUzWYEriVD77gVe"
+# 	- password: java.lang.String = "$2a$05$8zucuJi6nyJ2Ca2Ui3omxOVlRiyiQRdh9GiJk/sFjlFIYULuKpUO6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=auditor2, surname=One, email=auditor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=25, version=0}, acme.framework.entities.Authenticated{id=26, version=0}]
@@ -418,7 +418,7 @@ worker1UserAccount=27
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$HRxUqHEEQ6G318vfuz9EVOrZJE.GPHJPEvhCShJ10xcpglYjkRO9K"
+# 	- password: java.lang.String = "$2a$05$1x9Rlfn0a2bIPrC6Fk9ai.FtXB4Nhukr18t1jVP6Su2S959akLXMm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker, surname=One, email=worker1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=28, version=0}, acme.framework.entities.Authenticated{id=29, version=0}]
@@ -465,7 +465,7 @@ worker2UserAccount=30
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$QiMPrl/skqOawPdwcAJpHOx0cxIAMXCfdHe2AZ6qQ889BB4v/AMFK"
+# 	- password: java.lang.String = "$2a$05$2SYKCE73Z2oakkvRlHKyQuvszpsoDMUhqnyVwH1HcUCwZErH3y4Wq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=worker2, surname=One, email=worker2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=31, version=0}, acme.framework.entities.Authenticated{id=32, version=0}]
@@ -1661,6 +1661,7 @@ Application01=105
 # 	- moment: java.util.Date = <<Tue Dec 10 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
+# 	- ejdos: acme.entities.ejdos.Ejdos = acme.entities.ejdos.Ejdos{id=115, version=0}
 
 Application02=106
 
@@ -1680,6 +1681,7 @@ Application02=106
 # 	- moment: java.util.Date = <<Tue Dec 10 09:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=31, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
+# 	- ejdos: acme.entities.ejdos.Ejdos = null
 
 Application03=107
 
@@ -1699,6 +1701,7 @@ Application03=107
 # 	- moment: java.util.Date = <<Thu Dec 05 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=80, version=1}
+# 	- ejdos: acme.entities.ejdos.Ejdos = acme.entities.ejdos.Ejdos{id=116, version=0}
 
 Application04=108
 
@@ -1718,6 +1721,7 @@ Application04=108
 # 	- moment: java.util.Date = <<Mon Nov 25 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=31, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=80, version=1}
+# 	- ejdos: acme.entities.ejdos.Ejdos = null
 
 Application05=109
 
@@ -1737,6 +1741,7 @@ Application05=109
 # 	- moment: java.util.Date = <<Mon Dec 02 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=81, version=1}
+# 	- ejdos: acme.entities.ejdos.Ejdos = null
 
 Application06=110
 
@@ -1756,6 +1761,7 @@ Application06=110
 # 	- moment: java.util.Date = <<Sun Dec 08 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=82, version=1}
+# 	- ejdos: acme.entities.ejdos.Ejdos = null
 
 Application07=111
 
@@ -1771,10 +1777,11 @@ Application07=111
 # 	- skills: java.lang.String = "Skills7"
 # 	- qualifications: java.lang.String = "Qualifications7"
 # 	- statements: java.lang.String = "Statements7"
-# 	- status: java.lang.String = "ACCEPTED"
+# 	- status: java.lang.String = "REJECTED"
 # 	- moment: java.util.Date = <<Tue Dec 10 10:10:00 CET 2019>>
 # 	- worker: acme.entities.roles.Worker = acme.entities.roles.Worker{id=28, version=0}
 # 	- job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=83, version=1}
+# 	- ejdos: acme.entities.ejdos.Ejdos = null
 
 Justification01=112
 
@@ -1815,4 +1822,34 @@ CTest1=114
 # 	- pText: java.lang.String = "Hola"
 # 	- moreInfo2: java.lang.String = "hola otra ve"
 # 	- Job: acme.entities.jobs.Job = acme.entities.jobs.Job{id=79, version=1}
+
+Ejdos01=115
+
+# acme.entities.ejdos.Ejdos{id=115, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 115
+# 	- version: int = 0
+# 	from acme.entities.ejdos.Ejdos:
+# 	- serialVersionUID: long = 1
+# 	@ respuesta: java.lang.String = "Hola"
+# 	@ xxxx: java.lang.String = "hola otra ve"
+# 	@ protec: java.lang.String = "protec"
+# 	- application: acme.entities.application.Application = acme.entities.application.Application{id=105, version=0}
+
+Ejdos02=116
+
+# acme.entities.ejdos.Ejdos{id=116, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 116
+# 	- version: int = 0
+# 	from acme.entities.ejdos.Ejdos:
+# 	- serialVersionUID: long = 1
+# 	@ respuesta: java.lang.String = "Hola"
+# 	@ xxxx: java.lang.String = "hola otra ve"
+# 	@ protec: java.lang.String = "protec"
+# 	- application: acme.entities.application.Application = acme.entities.application.Application{id=107, version=0}
 
